syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// responses
import "responses/common/server-error.proto";


message LoginResponse {
  int32 id = 1;
  string username = 2;
  string token = 3;
  response_models.ServerError error = 4;
};
